[@mantine/core] Button: Fix incorrect Loader vertical alignment

--- a/packages/@mantine/core/src/components/Button/Button.module.css
+++ b/packages/@mantine/core/src/components/Button/Button.module.css
@@ -109,7 +109,7 @@
 
     & .loader {
       opacity: 1;
-      transform: translate(-50%, -50%);
+      transform: translate(-50%, calc(-50% + rem(1px)));
     }
   }
 
